# future-paper-tracker

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  settings.sh  vite.config.ts
.agents/skills/update-conference-by-id/: SKILL.md
.github/workflows/: conference-source-check.yml  pages.yml
agents/: main.py  pyproject.toml
apps/website/: index.html  package.json  tsconfig.json
config/: conference-sources.json  conferences.csv
data/: conferences.json
docs/: TODOs.md  codex-automation.md  requirements.md
docs/design/: 0000-template.md  0001-data-model.md  0002-data-ingestion.md  current-data-model.md
docs/feature/: conference-info-automation.md
public/: site.webmanifest
scripts/automation/: check-open-pr.ts  check-sources.ts  describe-target.ts  deterministic-update.test.ts  deterministic-update.ts  list-targets.ts  pr-guard.test.ts  pr-guard.ts  refresh-generated-at.ts  shared.test.ts  shared.ts  source-check.test.ts  source-check.ts  source-registry.ts  update-conferences.ts
src/: App.css  App.tsx  index.css
src/components/: ConferenceDetailPage.tsx  ConferenceListPage.tsx  SiteFooter.tsx
src/constants/: site.ts
src/data/: conferencesData.ts
src/hooks/: useConferenceSelection.ts  useCurrentTime.ts
src/lib/: conference-data.ts  conference-routing.ts  date.ts  pagination.ts
src/styles/: detail.css  footer.css  hero.css  layout.css  responsive.css  table.css
src/types/: conferences.ts  view.ts
tools/auto-fetch/: README.md  package.json  tsconfig.build.json  vite.config.ts
(+27 files in other folders)
