[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "beautifulsoup4>=4.12",
  "ddgs>=9.12.1",
  "langchain-community>=0.4.1",
  "langchain-core>=1.0",
  "langchain-ollama>=1.0.1",
  "langgraph>=1.1.6",
]
